# Chilli-Flow

./: .gitignore  PRODUCT.md  README.es.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/: architecture-phase-1.md  architecture-phase-2.md  architecture-phase-3.md  architecture-phase-4.md  architecture-phase-5.md  architecture-phase-6.md  project-organization.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  audio_analysis.rs  extensions.rs  finish_mode.rs  folder_setup.rs  folders.rs  handoff.rs  library.rs  mod.rs  playback.rs  project_files.rs  project_versions.rs  projects.rs  scanning.rs  workspaces.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/database/migrations/: 0001_initial.sql  0002_library_indexes.sql  0003_scan_history_metrics.sql  0004_project_folder_paths.sql  0005_audio_analysis.sql  0006_finish_mode.sql  0007_project_versions.sql  0008_managed_workspaces.sql  0009_universal_handoff.sql  0010_project_file_discovery.sql  0011_audio_tempo_key.sql
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: app_status.rs  audio_analysis.rs  custom_extension.rs  finish_mode.rs  folder_setup.rs  handoff.rs  mod.rs  playback.rs  project.rs  project_detail.rs  project_file.rs  project_query.rs  project_version.rs  scan.rs  watched_folder.rs  workspace.rs
src-tauri/src/platform/: mod.rs  path_validation.rs  system_open.rs
src-tauri/src/repositories/: audio_analysis_repository.rs  custom_extension_repository.rs  finish_mode_repository.rs  handoff_repository.rs  library_repository.rs  mod.rs  playback_repository.rs  project_detail_repository.rs  project_file_repository.rs  project_query_repository.rs  project_repository.rs  project_version_repository.rs  scan_history_repository.rs  watched_folder_repository.rs
src-tauri/src/scanner/: catalog.rs  engine.rs  mod.rs
src-tauri/src/services/: app_service.rs  audio_analysis_service.rs  audio_features.rs  extension_service.rs  finish_mode_service.rs  folder_service.rs  folder_setup_service.rs  handoff_service.rs  library_service.rs  mod.rs  playback_service.rs  project_detail_service.rs  project_file_service.rs  project_version_service.rs  scan_history_service.rs  scan_service.rs  workspace_service.rs
src-tauri/src/state/: mod.rs
src/stores/: scan-store.ts  (+7 more)
(+57 files in other folders)
