[package]
name = "chilli-beat"
version = "0.1.0"
description = "Biblioteca local de proyectos para productores musicales"
authors = ["Chilli Beat contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chilli_beat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-dialog = "2.7.2"
thiserror = "2"
walkdir = "2.5.0"
dunce = "1.0.5"

[dev-dependencies]
tempfile = "3.27.0"
