[package]
name = "chilli-flow"
version = "0.1.0"
description = "Flujo local de proyectos para productores musicales"
authors = ["Chilli Flow contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chilli_beat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.2"
thiserror = "2"
walkdir = "2.5.0"
dunce = "1.0.5"
sha2 = "0.10"
base64 = "0.22.1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
symphonia = { version = "0.6", default-features = false, features = ["flac", "ogg", "vorbis", "wav", "pcm", "mpa"] }
ebur128 = "0.1.10"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
tempfile = "3.27.0"
